--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,8 @@ name: tqueues
 channels:
   - defaults
 dependencies:
-  - bs4=4.11.1=hd3eb1b0_0
-  - matplotlib=3.5.1=py39h06a4308_1
-  - pandas=1.4.2=py39h295c915_0
-  - python=3.9.12=h12debd9_1
-  - requests=2.27.1=pyhd3eb1b0_0
+  - bs4=4.11.1
+  - matplotlib=3.5.1
+  - pandas=1.4.2
+  - python=3.9.12
+  - requests=2.27.1
