--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -4,7 +4,9 @@ name: Dublin Airport Queues in June
 on:
   schedule:
     - cron: '15 * * 6 *'  # Every 15 mins in June
-    
+  
+  workflow_dispatch:
+  
 jobs:
   # This workflow contains a single job called "build"
   build:
