--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -3,7 +3,7 @@ name: Dublin Airport Queues in June
 
 on:
   schedule:
-    - cron: '15 * * 6 *'  # Every 15 mins in June
+    - cron: '5 * 6 *'  # Every 15 mins in June
   
   workflow_dispatch:
   
@@ -17,6 +17,12 @@ jobs:
       - name: Github Checkout
         uses: actions/checkout@v3
 
+      - name: Downloading previous data to append to files
+        uses: actions/download-artifacts@v3
+        with:
+          name: The queue times
+          path: data/*.csv
+
       - name: Setup python enviroment and run the script
         uses: actions/setup-python@v3
         with:
@@ -26,9 +32,9 @@ jobs:
           pip install -r requirements.txt
           python main.py
           
-      - name: Save the times
+      - name: Save the data
         uses: actions/upload-artifact@v3
         with:
-          name: The terminal files
+          name: The queue times
           path: data/*.csv
           
