Correct order of jobs

--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -17,7 +17,14 @@ jobs:
       - name: Github Checkout
         uses: actions/checkout@v3
 
+      - name: Downloading previous data
+        uses: actions/download-artifact@v3
+        with:
+          name: The queue times
+          path: data/*.csv
+
       - name: Setup python enviroment and run the script
+        if: always()
         uses: actions/setup-python@v3
         with:
           python-version: '3.9'
@@ -25,12 +32,7 @@ jobs:
       - run: |
           pip install -r requirements.txt
           python main.py
-
-      - name: Downloading previous data to append to files
-        uses: actions/download-artifact@v3
-        with:
-          name: The queue times
-
+          
       - name: Save the data
         if: always()
         uses: actions/upload-artifact@v3
