--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -21,15 +21,17 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: The queue times
-          path: data/*.csv
 
-      - name: Setup python enviroment and run the script
+      - name: Setup python enviroment
         if: always()
         uses: actions/setup-python@v3
         with:
           python-version: '3.9'
           cache: 'pip'
-      - run: |
+      
+      - name: Download dependencies and run the script 
+        if: always() 
+        run: |
           pip install -r requirements.txt
           python main.py
           
