--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Github Checkout
         uses: actions/checkout@v3
 
-      - run: ls -a
+      - run: ls -a >> data/output.csv
 
       - name: Uncaching previous data
         uses: actions/cache@v3
@@ -25,7 +25,7 @@ jobs:
           path: data
           key: previous-data
 
-    - run: ls -a
+    - run: ls -a >> data/output.csv
 
       - name: Setup python enviroment
         uses: actions/setup-python@v3
