--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -25,6 +25,9 @@ jobs:
 
       - run: "pwd"
       - run: "ls -a .."
+      - run: "ls -a ../.."
+      - run: "ls -a ../../.."
+      - run: "ls -a ../../../.."
 
       - name: Setup python enviroment
         uses: actions/setup-python@v3
